--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -36,8 +36,20 @@ footer{
 .info, .lista-nomi{
     border: 2px solid #000;
     border-radius: 10px;
+    height: 500px;
+    overflow-y: auto;
 }
 
 .info{
     background-color: #eaf1fb ;
 }
+
+.nome-pokemon{
+    cursor: pointer;
+}
+
+.nome-pokemon:hover{
+    color:red;
+    transition: all 0.2s cubic-bezier(.215, .61, .355, 1);;
+}
+
