--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -1,5 +1,9 @@
 body{
-    margin: 0 auto;
+    
+    background: url(pokemon.jpg) no-repeat center center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
 }
 
 *, *::after, *::before{
@@ -10,6 +14,7 @@ html, body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 
 footer{
