--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -1,60 +1,62 @@
-body{
-    
-    background: url(pokemon.jpg) no-repeat center center;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
+body {
+  background: url(pokemon.jpg) no-repeat center center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
 
-*, *::after, *::before{
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
-html, body{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
 
-footer{
-    margin-top: 50px;
-    padding: 100px 0;
-    background-color: #333;
+footer {
+  margin-top: 50px;
+  padding: 100px 0;
+  background-color: #333;
 }
 
-.pokedex{
-    background-color: #ddd;
-    border-radius: 10px;
-    border: 2px solid #000;
+.pokedex {
+  background-color: #ddd;
+  border-radius: 10px;
+  border: 2px solid #000;
 }
 
-.col-12 h1{
-    padding: 20px 20px;
+.col-12 h1 {
+  padding: 20px 20px;
 }
-.col-12{
-    background-color: #fff;
-    border: 2px solid #000;
-    border-radius: 10px;
-}
-
-.info, .lista-nomi{
-    border: 2px solid #000;
-    border-radius: 10px;
-    height: 500px;
-    overflow-y: auto;
+.col-12 {
+  background-color: #fff;
+  border: 2px solid #000;
+  border-radius: 10px;
 }
 
-.info{
-    background-color: #eaf1fb ;
+.info,
+.lista-nomi {
+  border: 2px solid #000;
+  border-radius: 10px;
+  height: 500px;
+  overflow-y: auto;
 }
 
-.nome-pokemon{
-    cursor: pointer;
+.info {
+  background-color: #eaf1fb;
 }
 
-.nome-pokemon:hover{
-    color:red;
-    transition: all 0.2s cubic-bezier(.215, .61, .355, 1);;
+.nome-pokemon {
+  cursor: pointer;
 }
 
+.nome-pokemon:hover {
+  color: red;
+  transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
